<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonAddEmployee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddEmployee" />

    <Button
        android:id="@+id/buttonEditEmployee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EditEmployee" />

    <Button
        android:id="@+id/buttonSearchEmployee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SearchEmployee" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Copy" />

</LinearLayout>